k8s/production/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: build-number-generator-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  rules:
    - host: buildnumber.cqit.nl
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: build-number-generator-service
                port:
                  number: 80
  tls:
    - hosts:
        - buildnumber.cqit.nl
      secretName: build-number-generator-tls
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: build-number-generator-httpredirect-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
    traefik.ingress.kubernetes.io/router.middlewares: default-http-to-https-redirect@kubernetescrd
spec:
  rules:
    - host: buildnumber.cqit.nl
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: build-number-generator-service
                port:
                  number: 80
